--- a/_includesbackup/section_intro.html
+++ b/_includesbackup/section_intro.html
@@ -4,8 +4,8 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-			I am a Mechatronics Engineer working at BioCarbon Engineering, having previously ran a 3D printing business, which developed my skills in product development, and rapid prototyping. <br/><br/>
-			I enjoy developing new technologies which combine mechanical, electrical and software development skills.
+			I am a Mechatronics Engineer having worked at a Start-Up, BioCarbon Engineering.  Where I developed embedded python software for drone payloads and computer vision software (OpenCV3).  Using Test-Driven Development (UnitTest) and Git (BitBucket) for version control.<br/><br/>
+			I'm deeply interested in the development of new technologies and furtherering my software skills.
 		</div>
 		<br>
 	</div>
